cabal-version:       2.4
name:                attr
version:             0.0.0.0
synopsis:            a thing
description:         a thing
license:             MIT
license-file:        LICENSE
author:              Itai Y. Efrat
maintainer:          Itai Y. Efrat <itai3397@gmail.com>
copyright:           2020 Itai Y. Efrat
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

common common-options
  build-depends:       base ^>= 4.13.0.0
                     , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Attr

executable attr
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       attr
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
